update deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ permissions:
     contents: read
 
 jobs:
-  deployment:
+  deploy-dev:
     name: deploy to aws account
     runs-on: ubuntu-latest
 
