--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    types: [opened, reopened, closed, synchronize]
 
   workflow_dispatch:
 
@@ -18,7 +16,7 @@ jobs:
     name: deploy to aws account
     runs-on: ubuntu-latest
 
-    if: ${{ github.event_name == 'pull_request' && github.event.action != 'closed' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
 
     steps:
       - name: checkout 
